K8S/activities-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activities-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activitiesservice
  template:
    metadata:
      labels:
        app: activitiesservice
    spec:
      containers:
        - name: activitiesservice
          image: dviradani/activitiesservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: activities-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: activitiesservice
  ports:
    - name: activitiesservice
      protocol: TCP
      port: 80
      targetPort: 80
