K8S/cities-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: citiesnpservice-srv
spec:
  type: NodePort
  selector:
    app: citiesservice
  ports:
    - name: citiesservice
      protocol: TCP
      port: 80
      targetPort: 80
