K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: the-best-vacation.com
      http:
        paths:
          - path: /api/cities
            pathType: Prefix
            backend:
              service:
                name: cities-clusterip-srv
                port:
                  number: 80
          - path: /api/a/cities
            pathType: Prefix
            backend:
              service:
                name: activities-clusterip-srv
                port:
                  number: 80
